# scriptisto

./: .drone.yml  .gitignore  AUTHORS  CODE_OF_CONDUCT.md  Cargo.toml  README.md  build.rs
.github/workflows/: on-push.yml  on-release.yml  rust.yml
.rpm/: scriptisto.spec
data/: README.md  new-template
data/templates/: c.c  chicken.scm  cobol.cob  crystal.cr  csharp.cs  dart.dart  dart_multifile.dart  docker-c.c  docker-ocaml.ml  docker-reason.re  docker-rust.rs  elixir.ex  fortran.f90  go.go  haskell.hs  java.java  node.js  pascal.pp  python-mypy.py  python-pip.py  reasonml.re  rust.rs  sbcl.lisp  zig.zig
data/templates/dart_multifile_project/: functions.dart  main.dart
docs/: contributing.md
examples/: c.c  chicken.scm  cpp.cc  crystal.cr  deno.ts  docker  docker-c.c  docker-ocaml.ml  docker-rust.rs  elixir.ex  fortran.f  go.go  haskell.hs  java.java  ocaml.ml  pascal.pp  python.py  racket.rkt  reasonml.re  rust.rs  sbcl.lisp
man/: scriptisto-build.1  scriptisto-cache-clean.1  scriptisto-cache-get.1  scriptisto-cache-info.1  scriptisto-cache.1  scriptisto-new.1  scriptisto-template-edit.1  scriptisto-template-import.1  scriptisto-template-ls.1  scriptisto-template-rm.1  scriptisto-template.1  scriptisto.1
src/: build.rs  cache.rs  cfg.rs  common.rs  editor.rs  main.rs  opt.rs  templates.rs
