# Copyright 2019 The Scriptisto Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "scriptisto"
version = "0.2.0"
edition = "2018"
license = "Apache-2.0"
description = "A language-agnostic \"shebang interpreter\" that enables you to write scripts in compiled languages."
repository = "https://github.com/igor-petruk/scriptisto"
readme = "README.md"
categories = ["development-tools::build-utils", "command-line-utilities"]
authors = [
    "Google LLC",
    "Igor Petruk",
]

[dependencies]
dirs = '2.0.2'
exec = '0.3.1'
failure = '0.1.6'
include_dir = '0.2.1'
log = '0.4.8'
serde='1.0.101'
serde_derive='1.0.101'
serde_yaml='0.8.11'

[dependencies.simple_logger]
features = []
version = '1.3.0'

