# Copyright 2019 The Scriptisto Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "scriptisto"
version = "2.0.0"
edition = "2018"
license = "Apache-2.0"
description = "A language-agnostic \"shebang interpreter\" that enables you to write scripts in compiled languages."
repository = "https://github.com/igor-petruk/scriptisto"
readme = "README.md"
categories = ["development-tools::build-utils", "command-line-utilities"]
authors = [
    "Google LLC",
    "Igor Petruk",
]

[package.metadata.rpm.cargo]
target = "x86_64-unknown-linux-musl"
buildflags = ["--release"]

[package.metadata.rpm.targets]
scriptisto = { path = "/usr/bin/scriptisto" }

[dependencies]
dirs = '4.0'
exec = '0.3'
anyhow = '1'
include_dir = '0.7'
log = '0.4'
serde='1.0'
serde_derive='1.0'
serde_yaml='0.9'
md5="0"
ascii_table="4.0"
scrawl="1.1.0"
users="0.11"
walkdir="2"
number_prefix="0.4"
clap = { version = "3", features = ["derive"] }

[dependencies.env_logger]
default-features = false
version = '0'

[package.metadata.deb]
section = "utils"
assets = [
  ["target/release/scriptisto", "usr/bin/", "755"],
  ["LICENSE", "usr/share/doc/scriptisto/", "644"],
  ["README.md", "usr/share/doc/scriptisto/README", "644"],
  ["man/scriptisto.1", "usr/share/man/man1/scriptisto.1", "644"],
  ["man/scriptisto-build.1", "usr/share/man/man1/scriptisto-build.1", "644"],
  ["man/scriptisto-cache.1", "usr/share/man/man1/scriptisto-cache.1", "644"],
  ["man/scriptisto-cache-clean.1", "usr/share/man/man1/scriptisto-cache-clean.1", "644"],
  ["man/scriptisto-cache-get.1", "usr/share/man/man1/scriptisto-cache-get.1", "644"],
  ["man/scriptisto-cache-info.1", "usr/share/man/man1/scriptisto-cache-info.1", "644"],
  ["man/scriptisto-new.1", "usr/share/man/man1/scriptisto-new.1", "644"],
  ["man/scriptisto-template.1", "usr/share/man/man1/scriptisto-template.1", "644"],
  ["man/scriptisto-template-edit.1", "usr/share/man/man1/scriptisto-template-edit.1", "644"],
  ["man/scriptisto-template-import.1", "usr/share/man/man1/scriptisto-template-import.1", "644"],
  ["man/scriptisto-template-ls.1", "usr/share/man/man1/scriptisto-template-ls.1", "644"],
  ["man/scriptisto-template-rm.1", "usr/share/man/man1/scriptisto-template-rm.1", "644"],
]

[package.metadata.generate-rpm]
assets = [
  {source="target/release/scriptisto", dest="/usr/bin/",mode= "755"},
  {source="LICENSE", dest="/usr/share/doc/scriptisto/LICENSE", mode="644"},
  {source="README.md", dest="/usr/share/doc/scriptisto/README.md", mode="644"},
  {source="man/scriptisto.1", dest="/usr/share/man/man1/scriptisto.1", mode="644"},
  {source="man/scriptisto-build.1", dest="/usr/share/man/man1/scriptisto-build.1", mode="644"},
  {source="man/scriptisto-cache.1", dest="/usr/share/man/man1/scriptisto-cache.1", mode="644"},
  {source="man/scriptisto-cache-clean.1", dest="/usr/share/man/man1/scriptisto-cache-clean.1", mode="644"},
  {source="man/scriptisto-cache-get.1", dest="/usr/share/man/man1/scriptisto-cache-get.1", mode="644"},
  {source="man/scriptisto-cache-info.1", dest="/usr/share/man/man1/scriptisto-cache-info.1", mode="644"},
  {source="man/scriptisto-new.1", dest="/usr/share/man/man1/scriptisto-new.1", mode="644"},
  {source="man/scriptisto-template.1", dest="/usr/share/man/man1/scriptisto-template.1", mode="644"},
  {source="man/scriptisto-template-edit.1", dest="/usr/share/man/man1/scriptisto-template-edit.1", mode="644"},
  {source="man/scriptisto-template-import.1", dest="/usr/share/man/man1/scriptisto-template-import.1", mode="644"},
  {source="man/scriptisto-template-ls.1", dest="/usr/share/man/man1/scriptisto-template-ls.1", mode="644"},
  {source="man/scriptisto-template-rm.1", dest="/usr/share/man/man1/scriptisto-template-rm.1", mode="644"},
]

